add subject, manyemails addresses, tests
* add possibility to add subject (optional field) to email in the API.
* add validation to field: **to** when using more than one email
* update tests
